--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
-{
-    "GrowID": "capcieszg",
-    "Password": "ubikntol1@",
+SD{
+    "GrowID": "matthew200032",
+    "Password": "mattHew122@",
     "Email": "zdgzcfsfs",
     "Domain": "@gmail.com",
     "Port": 17198
